# acap-rs

./: .dockerignore  .gitattributes  .gitignore  CODEOWNERS  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  about.hbs  about.toml  apps-aarch64.checksum  apps-aarch64.filesize  apps-armv7hf.checksum  apps-armv7hf.filesize  artifacts.sha256sum  constraints.txt  init_env.sh  licensekey_handler.filesize  notes.md  remote-test.sh  requirements.txt  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.devhost/: constraints.txt  environment-setup.sh  install-devcontainer.sh  install-rust.sh  install-sdk.sh  install-system-packages.sh  install-venv.sh  requirements.txt
.github/: dependabot.yml
.github/workflows/: CI.yml  on-host-workflow.yml
apps/axoverlay_example/: Cargo.toml  manifest.json
apps/axoverlay_example/src/: main.rs
apps/axparameter_example/: Cargo.toml  manifest.json
apps/axserialport_example/: Cargo.toml  manifest.json
apps/axserialport_example/src/: main.rs
apps/axstorage_example/: Cargo.toml  manifest.json
apps/axstorage_example/src/: main.rs
apps/bounding_box_example/: Cargo.toml  manifest.json
apps/challenge_build_tools/: Cargo.toml  manifest.json  post-install.sh  pre-uninstall.sh
apps/complex/: Cargo.toml  manifest.json
apps/complex/src/: actors.rs  configuration.rs  main.rs  state.rs
apps/complex/src/actors/: placeholder.rs  server.rs
apps/consume_analytics_metadata/: Cargo.toml  manifest.json
apps/embedded_web_page/: Cargo.toml  LICENSE  build.rs  manifest.json
apps/event_subscribe/: Cargo.toml  manifest.json
apps/hello_world/: Cargo.toml  LICENSE  manifest.json
apps/inspect_env/: Cargo.toml  manifest.json  pre-uninstall
apps/licensekey_handler/: Cargo.toml  manifest.json
apps/mdb_test/: Cargo.toml  manifest.json
apps/mqtt_logger/: Cargo.toml  README.md  manifest.json
apps/mqtt_logger/additional-files/: sample-config.json
apps/mqtt_logger/src/: actors.rs  broker.rs  client.rs  configuration.rs  hush.rs  main.rs  state.rs
apps/mqtt_logger/src/actors/: mqtt_broker.rs  mqtt_client.rs
apps/object_detection/: Cargo.toml  manifest.json
apps/reverse_proxy/: Cargo.toml  manifest.json
apps/reverse_proxy/html/: index.html  main.js
apps/reverse_proxy/otherfiles/html/: index.html  main.js
apps/reverse_proxy/src/: app_logging.rs  main.rs
apps/send_event/: Cargo.toml  manifest.json
apps/subscribe_to_event/: Cargo.toml  manifest.json
apps/subscribe_to_event/src/: main.rs
apps/using_a_build_script/: Cargo.toml  build.rs
apps/vapix_access/: Cargo.toml  manifest.json
apps/vapix_access/src/: main.rs
apps/vdo_encode_client/: Cargo.toml  manifest.json
apps/vdoencodeclient/: Cargo.toml
crates/acap-build/: Cargo.toml
crates/acap-build/examples/: manifest2packageconf.rs
crates/acap-build/src/: cgi_conf.rs  command_utils.rs  files.rs  json_ext.rs  lib.rs  manifest.rs  package_conf.rs  param_conf.rs  static_manifest.rs  static_package_conf.rs
crates/acap-build/src/files/: cgi_conf.rs  manifest.rs  package_conf.rs  param_conf.rs
crates/acap-logging/: Cargo.toml  README.md
crates/acap-logging/src/: lib.rs
crates/acap-ssh-utils/: Cargo.toml  README.md
crates/acap-ssh-utils/src/: acap.rs  lib.rs  main.rs
crates/acap-vapix/: Cargo.toml  README.md
crates/acap-vapix/src/: ajr.rs  ajr2.rs  ajr_http.rs  ajr_http2.rs  apis.rs  http.rs  lib.rs
crates/acap-vapix/src/apis/: application.rs  applications_control.rs  applications_upload.rs  basic_device_info.rs  certificate_management.rs  mqtt_client1.rs  mqtt_event1.rs  parameter_management.rs  systemready.rs  ws_data_stream.rs
crates/acap-vapix/src/apis/basic_device_info/: get_all_unrestricted_properties_10_12_initial_response.json
crates/acap-vapix/src/apis/systemready/: 10_12_initial_response.json  11_11_initial_response.json
crates/app-logging/: Cargo.toml
crates/axevent/: Cargo.toml
crates/axevent-sys/: Cargo.toml  (+2 more)
crates/axevent/src/: ergo.rs  flex.rs  lib.rs  nonblock.rs
crates/axoverlay/: Cargo.toml
crates/axoverlay/src/: lib.rs
crates/cargo-acap-build/: Cargo.toml  README.md
crates/cargo-acap-build/src/: acap.rs  cargo.rs  cargo_acap.rs  command_utils.rs  lib.rs  main.rs
crates/cargo-acap-build/src/acap/: manifest.rs
crates/cargo-acap-build/src/cargo/: json_message.rs  metadata.rs
crates/cargo-acap-build/src/files/: license.rs
crates/cargo-acap-sdk/: Cargo.toml  README.md
crates/cargo-acap-sdk/src/: acap_utils.rs  cargo_utils.rs  command_utils.rs  commands.rs  docker_utils.rs  main.rs
crates/cargo-acap-sdk/src/commands/: build_command.rs  completions_command.rs  containerize_command.rs  control_command.rs  install_command.rs  run_command.rs  test_command.rs
crates/device-manager/: Cargo.toml  README.md
crates/device-manager/src/: initialization.rs  lib.rs  main.rs  restoration.rs  vapix.rs
crates/device-manager/src/vapix/: ajr.rs  ajr_http.rs  axis_cgi.rs  config.rs
crates/device-manager/src/vapix/axis_cgi/: featureflag1.rs  firmwaremanagement1.rs  pwdgrp.rs
crates/device-manager/src/vapix/axis_cgi/pwdgrp/: add_10_12_initial_response.html
crates/device-manager/src/vapix/config/: ssh1.rs
crates/fleet-manager/: Cargo.toml  README.md
crates/fleet-manager/src/: commands.rs  database.rs  main.rs
crates/fleet-manager/src/commands/: abandon_command.rs  adopt_command.rs  for_each_command.rs  reinitialize_command.rs
crates/larod/: Cargo.toml  README.md
crates/larod/compiler_tests/lifetimes/: tensor_lifetimes.rs  tensor_lifetimes.stderr
crates/larod/examples/: basic.rs  simple-file.rs
crates/larod/src/: connection.rs  device.rs  error.rs  job.rs  lib.rs  map.rs  model.rs  tensor.rs
crates/vdo/: Cargo.toml
crates/vdo/examples/: basic.rs
crates/vdo/src/: lib.rs  map.rs
docker/: install_rust.sh  py.Dockerfile  rs.Dockerfile
docs/: app-development-model.md  application-size.md  compatibility.md  manual-tests.md  project.md  related-projects.md  running-apps-and-tests-on-device.md  sanitizers.md
reverse_samba/: docker-compose.yml
(+115 files in other folders)
