[workspace]
members = [
    "apps/*",
    "crates/*",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
bindgen = "0.69.4"
diqwest = "3.1.0"
env_logger = "0.11.2"
glib-sys = "0.19.5"
libc = "0.2.153"
log = "0.4.20"
pkg-config = "0.3.30"
reqwest = { version = "0.12.5", default-features = false }
serde = "1.0.204"
serde_json = "1.0.120"
syslog = "6.1.1"
thiserror = "1.0.57"
tokio = "1.38.1"
url = "2.5.2"

acap-logging = { path = "crates/acap-logging" }
acap-vapix = { path = "crates/acap-vapix" }
licensekey = { path = "crates/licensekey" }
licensekey-sys = { path = "crates/licensekey-sys" }
mdb = { path = "crates/mdb" }
mdb-sys = { path = "crates/mdb-sys" }

[workspace.package]
edition = "2021"
