[workspace]
members = [
    "apps/*",
    "crates/*",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum = "0.7.4"
bindgen = "0.69.4"
diqwest = "3.1.0"
digest_auth = "0.3.1"
env_logger = "0.11.2"
futures = "0.3.30"
futures-util = "0.3.30"
glib = "0.19.7"
glib-sys = "0.19.5"
libc = "0.2.153"
log = "0.4.20"
pkg-config = "0.3.30"
reqwest = { version = "0.12.5", default-features = false }
reqwest-websocket = "0.4.1"
serde = "1.0.204"
serde_json = "1.0.120"
syslog = "6.1.1"
thiserror = "1.0.57"
tokio = "1.38.1"
tower-http = "0.5.2"
url = "2.5.2"

acap-logging = { path = "crates/acap-logging" }
acap-vapix = { path = "crates/acap-vapix" }
axevent = { path = "crates/axevent" }
axevent-sys = { path = "crates/axevent-sys" }
axstorage = { path = "crates/axstorage" }
axstorage-sys = { path = "crates/axstorage-sys" }
bbox = { path = "crates/bbox" }
bbox-sys = { path = "crates/bbox-sys" }
licensekey = { path = "crates/licensekey" }
licensekey-sys = { path = "crates/licensekey-sys" }
mdb = { path = "crates/mdb" }
mdb-sys = { path = "crates/mdb-sys" }

[workspace.package]
edition = "2021"

# For projects that build only apps it's probably easier to customize the releae profile.
[profile.app]
inherits = "release"
opt-level = "s"
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
