[workspace]
members = [
    "apps/*",
    "crates/*",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum = "0.7.4"
bindgen = "0.69.4"
clap = "4.5.1"
clap_complete = "4.5.2"
diqwest = "3.1.0"
digest_auth = "0.3.1"
dirs = "5.0.1"
env_logger = { version = "0.11.3", default-features = false }
futures = "0.3.30"
futures-util = "0.3.30"
flate2 = "1.0.30"
glib = "0.19.7"
glib-sys = "0.19.5"
glob = "0.3.1"
libc = "0.2.153"
log = "0.4.22"
pkg-config = "0.3.30"
regex = "1.7.2"
reqwest = { version = "0.12.5", default-features = false }
reqwest-websocket = "0.4.1"
semver = "1.0.23"
serde = "1.0.204"
serde_json = "1.0.120"
syslog = "6.1.1"
tar = "0.4.40"
tempdir = "0.3.7"
tempfile = "3.10.1"
thiserror = "1.0.61"
tokio = "1.38.1"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"

acap-build = { path = "crates/acap-build" }
acap-logging = { path = "crates/acap-logging" }
acap-ssh-utils = { path = "crates/acap-ssh-utils" }
acap-vapix = { path = "crates/acap-vapix" }
axevent = { path = "crates/axevent" }
axevent-sys = { path = "crates/axevent-sys" }
axstorage = { path = "crates/axstorage" }
axstorage-sys = { path = "crates/axstorage-sys" }
bbox = { path = "crates/bbox" }
bbox-sys = { path = "crates/bbox-sys" }
cargo-acap-build = { path = "crates/cargo-acap-build" }
cli-version = { path = "crates/cli-version" }
device-manager = { path = "crates/device-manager" }
licensekey = { path = "crates/licensekey" }
licensekey-sys = { path = "crates/licensekey-sys" }
mdb = { path = "crates/mdb" }
mdb-sys = { path = "crates/mdb-sys" }
larod = { path = "crates/larod" }
larod-sys = { path = "crates/larod-sys" }

[workspace.package]
edition = "2021"

# For projects that build only apps it's probably easier to customize the releae profile.
[profile.app]
inherits = "release"
opt-level = "s"
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
