[package]
name = "axstorage_example"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
glib = { workspace = true }
log = { workspace = true }

acap-logging = { workspace = true, default-features = true }
axstorage = { workspace = true }
libc = "0.2.158"
