[package]
name = "complex"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = "0.4.13"
tower-http = { workspace = true, features = ["fs", "trace"] }

acap-logging = { workspace = true }
acap-dirs = { git = "https://github.com/AxisCommunications/acap-rs.git", rev = "82b12f37b0dd5c756a74851a949b1d5c3567ab1e" }
