[package]
name = "reverse_proxy"
version = "1.0.0"
edition.workspace = true
publish = false

[dependencies]
axum = { workspace = true, features = ["tokio", "ws"] }
log = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
syslog = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["fs", "trace"] }
serde = { workspace = true, features = ["derive"] }

acap-logging = { workspace = true }
