[package]
name = "vapix_access"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
url = { workspace = true }

acap-logging = { workspace = true }
acap-vapix = { workspace = true }

[features]
default = ["acap-logging/default"]
