[package]
name = "acap-build"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dirs = { workspace = true }
env_logger = { workspace = true }
glob = { workspace = true }
log = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
tempfile = { workspace = true }
regex = { workspace = true }
tempdir = { workspace = true }

[features]
rust = []
