[package]
name = "acap-logging"
version = "0.0.1"
edition.workspace = true
description = "Logging utilities for ACAP applications"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AxisCommunications/acap-rs"
repository = "https://github.com/AxisCommunications/acap-rs"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true, features = ["auto-color"] }
syslog = { workspace = true }
