[package]
name = "acap-logging"
version = "0.1.0"
edition.workspace = true
description = "Logging utilities for ACAP applications"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AxisCommunications/acap-rs"
repository = "https://github.com/AxisCommunications/acap-rs"

[dependencies]
env_logger = { workspace = true, optional = true }
libsyslog = { workspace = true }
log = { workspace = true }

[features]
default = ["tty"]
tty = ["env_logger/auto-color"]
