[package]
name = "acap-ssh-utils"
version = "0.0.0"
edition.workspace = true

[dependencies]
# TODO: Remove anyhow usage from library
anyhow = { version = "1.0.79" }
clap = { version = "4.5.1", features = ["derive"] }
env_logger = { version = "0.11.1" }
flate2 = "1.0.30"
log = { version = "0.4.21" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
url = { version = "2.5.0" }
tar = "0.4.40"
