[package]
name = "acap-vapix"
version = "0.1.0"
edition.workspace = true
license = "MIT"

[dependencies]
diqwest = "3.1.0"
reqwest = { version = "0.12.5", default-features = false, features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.118" }
url = "2.5.2"
anyhow = "1.0.86"
log = "0.4.21"
clap = { version = "4.5.7", features = ["derive"] }

[dev-dependencies]
env_logger = "0.11.3"
tokio = { version = "1.38.0", features = ["full"] }
