[package]
name = "acap-vapix"
version = "0.0.0"
edition.workspace = true
description = "VAPIX access for ACAP apps"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AxisCommunications/acap-rs"
repository = "https://github.com/AxisCommunications/acap-rs"

[dependencies]
anyhow = { workspace = true }
diqwest = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
env_logger = "0.11.3"
tokio = { version = "1.38.0", features = ["full"] }
