[package]
name = "axevent"
version = "0.0.0"
edition.workspace = true
license = "MIT"

[dependencies]
glib = { workspace = true }
glib-sys = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

axevent-sys = { workspace = true }
futures-lite = { workspace = true, optional = true }
async-channel = { workspace = true, optional = true }

[features]
async = ["dep:futures-lite", "dep:async-channel"]
