[package]
name = "cargo-acap-build"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.1"
log = "0.4.17"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

acap-build = {path = "../acap-build"}