[package]
name = "cargo-acap-sdk"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true, default-features = true }
log = { workspace = true }
reqwest = { workspace = true, default-features = true, features = ["default-tls"] }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }

acap-ssh-utils = { workspace = true }
acap-vapix = { workspace = true }
cargo-acap-build = { workspace = true }
cli-version = { workspace = true }
ssh2 = { workspace = true }
