[package]
name = "fleet-manager"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive", "env"] }
dirs = "3.0.2"
glob = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", features = ["serde"] }

device-manager = { path = "../device-manager" }
acap-vapix = { workspace = true }
