[package]
name = "larod"
version = "0.0.0"
edition.workspace = true
license = "MIT"
description = "Safe Rust bindings for the Larod (ML Inference) API"

[dependencies]
larod-sys = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[features]
device-tests = []

[dev-dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
expect-test = { workspace = true }
