[package]
name = "vdo"
version = "0.0.0"
edition.workspace = true
license = "MIT"
description = "Safe Rust bindings for the VDO (Video Capture) API"

[dependencies]
vdo-sys = { workspace = true }
log = { workspace = true }
glib-sys = { workspace = true }
gobject-sys = { workspace = true }
thiserror = { workspace = true }

[features]
device-tests = []

[dev-dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
expect-test = { workspace = true }

[[example]]
name = "basic"
